任课班结构体更新
