# api/studentInformationAPI.go
@@ -28,16 +28,22 @@ func StudentInformation(basePath *gin.RouterGroup) {
 // @Param Authorization header string true "Token"
 // @Param student_id formData string true "学生学号"
 // @Param name formData string false "姓名"
-// @Param department formData string false "所在学院或部门"
-// @Param class formData string false "所在班级"
-// @Param entering_time formData string false "入校时间"
+// @Param department_old formData string false "原所在学院或部门"
+// @Param class_old formData string false "原所在班级"
+// @Param grade_old formData string false "原所在年级"
+// @Param department_new formData string false "现所在学院或部门"
+// @Param class_new formData string false "现所在班级"
+// @Param grade_new formData string false "现所在年级"
 // @Success 200 {string} json "{"status": 1}"
 // @Router /user/insert [post]
 func Insert(c *gin.Context) {
+	//模型填充
 	var studentInformation model.StudentInformation
 	_ = c.ShouldBind(&studentInformation)
-	service.Insert(&studentInformation)
-	c.JSON(http.StatusOK, gin.H{"status": 1})
+	//状态回调
+	status := service.Insert(&studentInformation)
+	//回调
+	c.JSON(http.StatusOK, gin.H{"status": status})
 }
 
 // @Summary 更新学生信息记录
@@ -48,15 +54,21 @@ func Insert(c *gin.Context) {
 // @Param Authorization header string true "Token"
 // @Param student_id formData string true "学生学号"
 // @Param name formData string false "姓名"
-// @Param department formData string false "所在学院或部门"
-// @Param class formData string false "所在班级"
-// @Param entering_time formData string false "入校时间"
+// @Param department_old formData string false "原所在学院或部门"
+// @Param class_old formData string false "原所在班级"
+// @Param grade_old formData string false "原所在年级"
+// @Param department_new formData string false "现所在学院或部门"
+// @Param class_new formData string false "现所在班级"
+// @Param grade_new formData string false "现所在年级"
 // @Param permissions formData string false "权限"
 // @Success 200 {string} json "{"status": 1}"
 // @Router /user/update [post]
 func Update(c *gin.Context) {
+	//模型填充
 	var studentInformation model.StudentInformation
 	_ = c.ShouldBind(&studentInformation)
-	service.Update(&studentInformation)
-	c.JSON(http.StatusOK, gin.H{"status": 1})
+	//状态回调
+	status := service.Update(&studentInformation)
+	//回调
+	c.JSON(http.StatusOK, gin.H{"status": status})
 }
